--- a/src/app/player-item/player-item.component.html
+++ b/src/app/player-item/player-item.component.html
@@ -3,7 +3,7 @@
     <img src="{{ player.image }}" alt="" />
     <div class="point">
       <span class="username">{{ player.username }}</span>
-      <span class="pointChart"></span>
+      <!-- <span class="pointChart"></span> -->
     </div>
   </div>
   <div class="credibility">
