--- a/src/app/add-user/add-user.component.css
+++ b/src/app/add-user/add-user.component.css
@@ -36,3 +36,19 @@
   padding: 5px 10px;
   min-width: 100px;
 }
+
+@media screen and (max-width: 825px) {
+  .input{
+    width: 80%;
+  }
+
+  .form-field{
+    margin: auto;
+    margin-bottom: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
