--- a/src/app/news-item/news-item.component.css
+++ b/src/app/news-item/news-item.component.css
@@ -16,6 +16,10 @@
   margin-left: 15px;
 }
 
+.orange-background{
+  background-color: #F09E2B;
+}
+
 .green-background {
   background-color: rgb(0, 255, 47);
 }
