--- a/src/app/news-item/news-item.component.html
+++ b/src/app/news-item/news-item.component.html
@@ -1,5 +1,5 @@
-<div class="news-item" [ngClass]="{ 'green-background': isInNewsProcessing(), 'dark-background': isInNewsProcessed() }">
-    <div class="new">{{ new }}</div>
+<div class="news-item" [ngClass]="{ 'orange-background': isNewsComplex(new), 'green-background': isInNewsProcessing(), 'dark-background': isInNewsProcessed() }">
+    <div class="new" [innerHTML]="new"></div>
     <button mat-raised-button [disabled]="isInNewsProcessed()" (click)="openDialog(new)" mat-dialog-close>Traiter</button>
   </div>
   
