--- a/src/app/player-setup-page/player-setup-page.component.css
+++ b/src/app/player-setup-page/player-setup-page.component.css
@@ -28,7 +28,8 @@
   justify-content: center;
   flex-wrap: wrap;
   width: 600px;
-  min-height: 100%;
+  height: 450px;
+  overflow: scroll;
   list-style: none;
   background-color: azure;
 }
@@ -38,4 +39,35 @@ button {
   border-radius: 4px;
   padding: 20px 40px;
   min-width: 100px;
+}
+
+.tour{
+  margin-left: 15px;
+  width: 55px;
+  padding: 5px;
+  font-size: large;
+}
+
+@media screen and (max-width: 825px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .listUsers {
+    flex: auto;
+    width: 80%;
+    height: 200px;
+    overflow-y: scroll;
+  }
+
+  .containerTour{
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .listUsers {
+    height: 150px;
+  }
 }
