--- a/src/app/profile-image-selector/profile-image-selector.component.css
+++ b/src/app/profile-image-selector/profile-image-selector.component.css
@@ -1,5 +1,5 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
 .form-field {
@@ -7,7 +7,7 @@
 }
 
 .image-list {
-    margin-top: 8px;
+  margin-top: 8px;
   display: flex;
   width: 500px;
   height: 300px;
@@ -30,4 +30,30 @@
 .image img {
   width: 75px;
   height: 75px;
+}
+
+@media screen and (max-width: 825px) {
+  .image-list {
+    justify-content: center;
+    width: 80%;
+    height: 200px;
+  }
+
+  .image img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .form-field{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .image-list {
+    height: 70px;
+  }
 }
