--- a/src/app/action-modal/action-modal.component.css
+++ b/src/app/action-modal/action-modal.component.css
@@ -34,3 +34,16 @@ mat-dialog-content {
 .dark-background {
   background-color: darkgrey;
 }
+
+@media screen and (max-width: 700px) {
+  .actions {
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .actions {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
