Fix Start Page Size

--- a/src/app/start-page/start-page.component.css
+++ b/src/app/start-page/start-page.component.css
@@ -19,3 +19,12 @@ button {
   padding: 20px 40px;
   min-width: 100px;
 }
+
+@media screen and (max-width: 500px) {
+  .start-page span{
+  font-size: x-large;
+  font-family: 'Press Start 2P', cursive;
+}
+}
+
+
