Ajout des regles reels de calcul de la credibilité

--- a/src/app/final-page/final-page.component.html
+++ b/src/app/final-page/final-page.component.html
@@ -1,6 +1,8 @@
 <div class="main">
-    <button class="restart-button" mat-raised-button (click)="restart()">Revenir à la page initiale</button>
     <h1 class="title title-podium">Podium</h1>
+    <div class="restart">
+        <button class="restart-button" mat-raised-button (click)="restart()">Revenir à la page initiale</button>
+    </div>
     
         <div class="podium" >
         <img class="podium-image" src="../../assets/podium.png" alt="Podium"/>
