--- a/src/app/publish-modal/publish-modal.component.html
+++ b/src/app/publish-modal/publish-modal.component.html
@@ -23,6 +23,9 @@
       <button mat-raised-button (click)="publishHandle()" mat-dialog-close>
         Publier les news
       </button>
+      <button mat-raised-button (click)="invaliderHandle()" mat-dialog-close>
+        Invalider les news
+      </button>
       <button mat-raised-button (click)="finishHandle()" mat-dialog-close>
         Terminer le tour
       </button>
