--- a/src/app/user-info-details/user-info-details.component.html
+++ b/src/app/user-info-details/user-info-details.component.html
@@ -12,13 +12,13 @@
         class="progressBar"
       ></mat-progress-bar>
       <div class="actions">
-        <button mat-raised-button (click)="traiter(news)" mat-dialog-close>
+        <button mat-raised-button (click)="traiter(news)">
           Traiter la news
         </button>
-        <button mat-raised-button (click)="publier(news)" mat-dialog-close>
+        <button mat-raised-button (click)="publier(news)">
           Publier la news
         </button>
-        <button mat-raised-button (click)="terminer(news)" mat-dialog-close>
+        <button mat-raised-button (click)="terminer(news)">
           Invalider la news
         </button>
       </div>
