--- a/src/app/user-item/user-item.component.html
+++ b/src/app/user-item/user-item.component.html
@@ -1,5 +1,5 @@
 <li class="user">
   <img [src]="user.image" alt="{{ user.username }}" />
   <div>{{ user.username }}</div>
-  <button type="button" (click)="handleDelete()">Delete</button>
+  <button type="button" (click)="handleDelete()">Supprimer</button>
 </li>
