--- a/src/app/final-page/final-page.component.css
+++ b/src/app/final-page/final-page.component.css
@@ -89,10 +89,19 @@
   margin-top: 10px;
 }
 
+.restart{
+  width: 100%;
+  padding-right: 50px;
+  display: flex;
+  justify-content: end;
+}
+
 .restart-button {
-  position: absolute;
-  top: 30px;
-  right: 30px;
+  position: relative;
+  margin-top:10px;
+  padding: 10px 20px;
+  margin-bottom: 30px;  
+  z-index: 100;
 }
 
 .classement-container {
