Ajustement: taille liste d'images, Empecher le choix de deux meme pseudo

--- a/src/app/profile-image-selector/profile-image-selector.component.html
+++ b/src/app/profile-image-selector/profile-image-selector.component.html
@@ -1,5 +1,5 @@
 <div class="form-field">
-  <label for="profile-image">Profile Image:</label>
+  <label for="profile-image">Image de Profil:</label>
   <div class="image-list">
     <div
       *ngFor="let image of images"
