Apport N°1 de quelques modifs pour un meilleur gameplay

--- a/src/app/action-confirmation-modal/action-confirmation-modal.component.html
+++ b/src/app/action-confirmation-modal/action-confirmation-modal.component.html
@@ -3,7 +3,7 @@
 <mat-dialog-content>
     <div>
         <div class="action">{{texte}}</div>
-        <div class="texte">Celà a eu un impact de <span>{{gainPerte}}</span> sur la véracité de l'information que vous détener</div>
+        <div class="texte">Cela a eu un impact de <span>{{gainPerte}}</span> sur la véracité de l'information que vous détener</div>
     </div>
 <mat-dialog-actions align="end">
     <button mat-raised-button [mat-dialog-close]="true">OK</button>
