Quelques modifs de test et corrections de bug de couleur

--- a/src/app/final-page/final-page.component.html
+++ b/src/app/final-page/final-page.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <h1 class="title title-podium">Podium</h1>
     <div class="restart">
-        <button class="restart-button" mat-raised-button (click)="restart()">Revenir à la page initiale</button>
+        <button class="restart-button" mat-raised-button (click)="restart()">Commencer une nouvelle partie</button>
     </div>
     
         <div class="podium" >
