--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -20,7 +20,8 @@
 
 .finishBtn {
   border: none; /* supprime la bordure */
-  color: white; /* couleur du texte */
+  color: black; /* couleur du texte */
+  background-color: white;
   padding: 20px 20px; /* espace intérieur */
   text-align: center; /* alignement du texte */
   font-size: 20px; /* taille de police */
